; ModuleID = '/home/carl/AnghaBench/sway/common/extr_list.c_list_qsort.c'
source_filename = "/home/carl/AnghaBench/sway/common/extr_list.c_list_qsort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @list_qsort(%struct.TYPE_3__* %0, i32 (i8*, i8*)* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32 (i8*, i8*)*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 (i8*, i8*)* %1, i32 (i8*, i8*)** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %4, align 8
  %12 = call i32 @qsort(i32 %7, i32 %10, i32 8, i32 (i8*, i8*)* %11)
  ret void
}

declare dso_local i32 @qsort(i32, i32, i32, i32 (i8*, i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
